Change License Plate to VIN

--- a/Views/Vehicle/_VehicleHistory.cshtml
+++ b/Views/Vehicle/_VehicleHistory.cshtml
@@ -22,7 +22,7 @@
                     <span class="display-6">@($"{Model.VehicleData.Year} {Model.VehicleData.Make} {Model.VehicleData.Model}")</span>
                 </li>
                 <li class="list-group-item">
-                    <span class="lead">@Model.VehicleData.LicensePlate</span>
+                    <span class="lead">@Model.VehicleData.VIN</span>
                 </li>
                 <li class="list-group-item">
                     <div class="row">
